@@ -1,3 +1,6 @@
+<h5>2.0.0 Stable</h5> [2023/02/28]
+ - moved to last stable with smarty 2 (goffy)
+
 <h5>2.0.0 Beta1</h5> [2021/12/29]
 <hr>
  - semantic versioning (goffy)
